# SCROLL

./: .gitignore  CONCEPT.md  CONTRIBUTING.md  MANIFEST.in  README.md  collected_traces.pkl  configs.py  demo.py  example.py  flit_build.sh  main.py  monkeytype.sqlite3  pyproject.toml  run_demo.py  scroll.py  setup.py  test_build.sh  test_example.py  test_scroll.py  tracer.py
demo/: configs.js  demo.py
demo/docs/: functions_data.js  index.html  scroll.css  traces_data.js
docs/: functions_data.js  index.html  traces_data.js
scroll/: __init__.py  docs.html  generators.py  helpers.py  runner.py  scroll.css  scroll.py  tracer.py
scroll/templates/: index.html  scroll.css
