[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "scroll"
author = "Edison Abahurire"
author-email = "abahedison@gmail.com"
home-page = "https://github.com/SimiCode/scroll"
requires=[
]
requires-python=">=3.6"
description-file="README.md"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]