[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "scroll"
author = "Edison Abahurire"
author-email = "abahedison@gmail.com"
home-page = "https://github.com/SimiCode/scroll"
requires=[
]
requires-python=">=3.6"
description-file="README.md"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]